# 2023-Capstone

v7a Sept 2023/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
v7a Sept 2023/catkin_ws/devel/include/dynamixel_sdk_examples/: GetMotorSensors.h  GetMotorSensorsRequest.h  GetMotorSensorsResponse.h  GetPosition.h  GetPositionResponse.h
v7a Sept 2023/catkin_ws/devel/include/msf_distort/: MSF_DistortConfig.h
v7a Sept 2023/catkin_ws/devel/include/msf_updates/: PosePressureSensorConfig.h  PositionPoseSensorConfig.h  SinglePoseSensorConfig.h  SinglePositionSensorConfig.h  SphericalPositionSensorConfig.h
v7a Sept 2023/catkin_ws/devel/lib/: libgflags.so.2.2.1  libgflags_nothreads.so.2.2.1
v7a Sept 2023/catkin_ws/devel/lib/dynamixel_sdk/: group_bulk_read.py  group_bulk_write.py  port_handler.py  protocol1_packet_handler.py  protocol2_packet_handler.py  robotis_def.py
v7a Sept 2023/catkin_ws/devel/lib/dynamixel_sdk_examples/: bulk_read_write_node  indirect_address_node  read_write_node  (+1 more)
v7a Sept 2023/catkin_ws/src/: .rosinstall  .rosinstall.bak
v7a Sept 2023/catkin_ws/src/gui_tutorials/: CMakeLists.txt
v7a Sept 2023/catkin_ws/src/mapping/: CMakeLists.txt  package.xml
v7a Sept 2023/catkin_ws/src/mapping/include/: CMakeLists.txt  package.xml
v7a Sept 2023/catkin_ws/src/mapping/launch/: mapper.launch
v7a Sept 2023/catkin_ws/src/mapping/src/: ReadMe.txt  main.cpp  map_visualization.cpp  map_visualization.h  mapper_node.cpp  octomap_processing.cpp  octomap_processing.h  packetPasser.cpp  ros_communication.cpp  ros_communication.h
v7a Sept 2023/catkin_ws/src/static_stability/: CMakeLists.txt  package.xml
(+257 files in other folders)
